--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 .header {
-  height: 80px;
-  width: 1336px;
-  background-color: #DC5041;
   display:flex;
   justify-content: space-between;
   align-items: center;
+  width: 1336px;
+  height: 80px;
+  padding: 0 30px 0 25px;
+  background-color: #DC5041;
 }
 
 .logo {
   font-size: 26px;
-  color: #FFFFFF;
   font-weight: bold;
-  padding-left:25px;
+  color: #FFFFFF;
 }
 
-.logout {
+.logout a{
+  text-decoration: none;
   font-size: 14px;
   font-weight: bold;
   color: #FFFFFF;
-  padding-right: 30px;
 }
 
 .main {
@@ -29,10 +29,40 @@
   height: 688px;
   width: 260px;
   background-color: #F8F5F5;
+  padding: 45px 20px;
+}
+
+.diary {
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 80px;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+}
+
+.diary__date {
+  font-size: 12px;
+  font-weight: 600;
+  padding-bottom: 8px;
+}
+
+.diary__text {
+  font-size: 10px;
+  color: #3A3736;
+  line-height: 12px;
 }
 
 .chat-main {
   height: 688px;
   width: 1106px;
   background-color: #FFFFFF;
+  padding: 45px 20px;
+}
+
+.input-form {
+  border: 1px solid #A0A0A0;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
 }
