--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@
   width: 1366px;
   height: 688px;
   background-color: #F8F5F5;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .dialog {
@@ -85,10 +88,15 @@
   padding: 0 5px;
   background-color: #DC5041;
   color: #FFFFFF;
+  display: flex;
+  align-items: center;
 }
 
 .dialog__body {
   width: 100%;
   height: 200px;
   border-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
